исправлены методы в репозитории и fetch type